Changes for 1.5.1
* Fixed bug where you were not allowed zero (0) for the unitPresence count. (veqryn)

* Making the check to see if you can do the purchase phase, the same for both humans and AIs. (veqryn)

* Fixed null pointer error for when a player runs low on resources. (veqryn)

* Fixing a couple "Lock not held" errors. (veqryn)

* Fixed the Battle Calculator not displaying combat units with 'AA' abilities. (veqryn)

* Fixed the "Cant add an event, not a step" bug for adding AddBattleRecordsChange. (veqryn)

* Fixed bug with Air Battles where there were more hits than aircraft. (veqryn)


Changes for 1.5
* Adding new Game-Play manual. (victor, veqryn, hepster)

* Fixing build xml to export new docs. (veqryn)

* Fixed major bug with new Delayed parsing method, it will now correctly handle maps with errors in them by removing them from the game chooser list. (veqryn)

* Creating better error messages for setting attachment options in xmls. (veqryn)

* Fixing bug where suicide attack units could target units in transports. (veqryn)

* Some major bug fixes to movement with paratroopers, including not allowing units with multiple movement to move through all enemies once you get paratroopers. (veqryn)

* Created new game option, "Paratroopers Can Attack Deep Into Enemy Territory", which will allow movement for air transports during combat move over enemy territories. (veqryn)

* Deleted Player Attachment stackingLimit and replaced with movementLimit, attackingLimit, and placementLimit. (veqryn)

* Deleted Unit Attachment stackingLimit and replaced with movementLimit, attackingLimit, and placementLimit. (veqryn)

* Fixing potential bugs with new .equals for all attachments. (veqryn)

* Disabled political action button when taking actions, to prevent taking multiple actions while waiting for confirmation of the first. (veqryn)

* Fixed major error preventing politics from working over the network, due to the new way condition testing works. (veqryn)
